# spz-rs

./: Cargo.toml  LICENSE  README.md
Samples/: Converted.ply  Single.spz  Single2.ply  SingleSH.ply  SingleSH.spz  test-splat.3-points-from-train-ascii.ply  test-splat.3-points-from-train.spz
src/: SPZReader.rs  bin.rs  fixedpoint24.rs  hilbert_curve.rs  lib.rs  main.rs  ply_format.rs  spherical_harmonics.rs  spz.rs  spz_format.rs  spz_reader.rs  spz_writer.rs  support.rs  unpacked_gaussian.rs
