[package]
name = "spz"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
better-panic = "0.3.0"
bytemuck = { version = "1.21.0", features = ["derive"] }
clap = { version = "4.5.28", features = ["derive"] }
flate2 = "1.0.35"
itertools = "0.14.0"
ply-rs = "0.1.3"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
vek = "0.17.1"

[dev-dependencies]
approx = "0.5.1"

[lib]
name = "spz"
path = "src/lib.rs"

[[bin]]
name = "spz-rs"
path = "src/bin.rs"
